fix(contact-forms) styling and whitespace

--- a/src/client/components/forms/forms.css
+++ b/src/client/components/forms/forms.css
@@ -49,6 +49,7 @@ select {
   background-size: var(--form-select-caret-width);
   background-repeat: no-repeat;
   background-position: 100%;
+  -webkit-appearance: none;
   appearance: none;
 }
 
